--- a/views/infoBox.pug
+++ b/views/infoBox.pug
@@ -8,7 +8,7 @@ head
 .infoBoxContainer
   .infoBox
     .infoBoxUserID
-      a(href="") id가 들어올곳.
+      a(href="") #{id}
     br
     .infoBoxUserPoint
-      a(href="") point가 들어올곳.
+      a(href="") #{userpoint}
