--- a/views/index.pug
+++ b/views/index.pug
@@ -6,9 +6,13 @@ head(lang="ko")
   title Document
   link(rel='stylesheet', href='/css/index.css', type='text/css')
   link(rel='stylesheet', href='/css/header.css', type='text/css')
+  link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
 body
   header
     include ./header.pug
+  
+  include ./infoBox.pug
+  
   main
     include ./infoBox.pug
 
