--- a/views/rewrite.pug
+++ b/views/rewrite.pug
@@ -6,9 +6,13 @@ head(lang="ko")
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/table.css', type='text/css')
+  link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
 body
     header 
         include ./header.pug
+
+    include ./infoBox.pug
+    
     main(style="text-align : center")
         h1 #{title}
         div
