--- a/views/write.pug
+++ b/views/write.pug
@@ -6,10 +6,14 @@ head(lang="ko")
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/table.css', type='text/css')
+  link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
 
 body 
     header 
         include ./header.pug
+    
+    include ./infoBox.pug
+
     main
         h1 #{title}
         form(action='/board/write' method='post')
