머지콘플릭

--- a/views/boardpage.pug
+++ b/views/boardpage.pug
@@ -11,6 +11,9 @@ head(lang="ko")
 body(style="text-align : center")
     header 
         include ./header.pug
+
+    include ./infoBox.pug
+    
     main
         h1 #{title}
         a(href='/') main
