--- a/views/searchpage.pug
+++ b/views/searchpage.pug
@@ -29,12 +29,10 @@ body(style="text-align : center")
                     td 조회수
                     td 수정일
                     td 등록일
-                -for(var i = (page * page_num) - page_num; i<(page * page_num); i++)
-                    -if(i > length) 
-                        -var data = {}
-                    -else var data = rows[i]
+                -for(var i = 0; i<rows.length; i++)
+                    -var data = rows[i]
                         tr
-                            td #{i + 1}
+                            td #{data.idx}
                             td #{data.userid}
                             td
                                 a(href='/board/read/' + data.idx) #{data.title}
