--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ body
   include ./infoBox.pug
   
   main
-    include ./infoBox.pug
+    //- include ./infoBox.pug
 
     section.forWheelPage
       .sec_1_container
