--- a/views/infoBox1_Origin.html
+++ b/views/infoBox1_Origin.html
@@ -5,28 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./css/infoBox.css"> -->
+    <link rel="stylesheet" type="text/css" href="./css/infoBox.css">
 </head>
 <body>
-    <style>
-        .infoBoxContainer {
-            /* background-color: red; */
-            width: 20vh;
-            height: 15vh;
-            top: 150px;
-            right: 30px;
-
-            display:table;
-            position: absolute;
-        }
-        .infoBox {
-            background-color: royalblue;
-            border: 3px solid yellow;
-            border-radius: 10px;
-            display:table-cell;
-            vertical-align:middle;
-        }
-    </style>
     <div class="infoBoxContainer">
         <div class="infoBox">
             <div class="infoBoxUserID">
