--- a/views/read.pug
+++ b/views/read.pug
@@ -63,15 +63,13 @@ body
                         tbody
                             td 작성자
                             td 내용
-                            td 좋아요 수
                             -for(var i = 0; i<comrows.length; i++)
                                 -var data = comrows[i]
                                 tr
-                                    td #{data.userid}
+                                    td(style="width:10%;") #{data.userid}
                                     td #{data.comments}
-                                    td #{data.likecnt}
                                     -if(id==data.userid)
-                                        td(style="border:0")
+                                        td(style="border:0; width:10%;")
                                             form(action="/board/comment/delete" method = "post")
                                                 input(type='hidden' name='idx' value=rows.idx)
                                                 input(type='hidden' name='comidx' value=data.idx)
