--- a/views/infoBox.pug
+++ b/views/infoBox.pug
@@ -1,3 +1,4 @@
+//- <<<<<<< HEAD
 //- doctype html
 //- head
 //-   meta(charset='UTF-8')
@@ -18,10 +19,12 @@ div
   .infoBoxContainer
     .infoBox
       .infoBoxUserID
-        a(href='/') #{dataPrim.id}님, 환영합니다!
+        //- a(href='/') #{dataPrim.id}님, 환영합니다!
+        a(href='/') #{dataPrim.id}
       br
       .infoBoxUserPoint
-        a(href='/') 보유한 포인트: #{dataPrim.point}
+        //- a(href='/') 보유한 포인트: #{dataPrim.point}
+        a(href='/') POINT : #{dataPrim.point}
 //- =======
 //- doctype html
 //- head
