--- a/views/read.pug
+++ b/views/read.pug
@@ -43,7 +43,7 @@ body
 
                 div
                     a(href='/board/page') 목록
-            if(loginstate=='okay')
+            if(id==rows.userid)
                 form(action='/board/rewrite', method='get')
                     button(type='submit')  글 수정
             br
