211210_LftPopup 이미지수정_안성준

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,13 +19,11 @@ body
       .sec_1_container
         .leftPopupContainer.lefyPopupDelay
           .leftPopupBox.lefyPopupDelay
-            h1 &#xC2A4;&#xD0A8;&#xD560;&#xC778;&#xD310;&#xB9E4;&#xC911;
-            br
-            h1 &#xC2A4;&#xD0A8;&#xD560;&#xC778;&#xD310;&#xB9E4;&#xC911;
-            br
-            h1 &#xC2A4;&#xD0A8;&#xD560;&#xC778;&#xD310;&#xB9E4;&#xC911;
-            br
-            h1 &#xC2A4;&#xD0A8;&#xD560;&#xC778;&#xD310;&#xB9E4;&#xC911;
+            div
+              img.leftPopupImg(src='./img/main/nidalee.png')
+            .leftPopupBG
+              img.leftPopupBG(src='./img/main/logoLeftPopupbg.png')
+
         .introBox
           .freeSkinContainer
             .freeSkinBox.animDelay_01
