211210_LeftPopup 768사이즈 대응_안성준

--- a/views/css/index.css
+++ b/views/css/index.css
@@ -405,10 +405,15 @@ a {
   @media (max-width: 768px) {
     
 
-    .leftPopupContainer,
+    /* .leftPopupContainer,
     .leftPopupBox {
       left: -450px;
+    } */
+    .leftPopupContainer,
+    .leftPopupBox {
+      display: none;
     }
+    
 
     .freeSkin_rightIn,
     .freeSkin_leftIn {
