--- a/views/test2.pug
+++ b/views/test2.pug
@@ -6,19 +6,21 @@ head
   title Test
   style.
     .champion {
-    background-color: violet;
+    //- background-color: violet;
     width: 900px;
     height: auto;
-    margin-left: 13%;
-    margin-top: 15%;
+    //- margin-left: 13%;
+    margin: 0 auto;
+    margin-top: 10%;
     }
     .line_seperator {
-    background-color: yellowgreen;
+    //- background-color: yellowgreen;
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 2%;
     }
     .main-container {
-    background-color: tomato;
+    //- background-color: tomato;
     display: flex;
     width: 95%;
     height: auto;
