--- a/views/mypage.pug
+++ b/views/mypage.pug
@@ -41,6 +41,11 @@ body(style="text-align : center")
           table(border='1')
             tbody
               tr
-              -for(var i = 0; i<imgsrc.length; i++)
+                -for(var i = 0; i<imgsrc.length; i++)
+                
                   td 
-                    img(src='/'+imgsrc[i].imgsrc)
+                    img(src='/'+imgsrc[i].imgsrc) 
+              tr
+                -for(var i = 0; i<imgsrc.length; i++)
+                  td #{skinname[i]}
+              
