--- a/views/infoBox.pug
+++ b/views/infoBox.pug
@@ -20,11 +20,11 @@ div
     .infoBox
       .infoBoxUserID
         //- a(href='/') #{dataPrim.id}님, 환영합니다!
-        a(href='/') #{dataPrim.id}
+        span.infolet #{dataPrim.id}
       br
       .infoBoxUserPoint
         //- a(href='/') 보유한 포인트: #{dataPrim.point}
-        a(href='/') POINT : #{dataPrim.point}
+        span.infolet POINT : #{dataPrim.point}
 //- =======
 //- doctype html
 //- head
