--- a/views/test2.pug
+++ b/views/test2.pug
@@ -9,15 +9,16 @@ head
     //- background-color: violet;
     width: 900px;
     height: auto;
-    //- margin-left: 13%;
     margin: 0 auto;
-    margin-top: 10%;
+    //- margin-left: 13%;
+    margin-top: 7%;
+    border: 2px solid rgb(226, 164, 71);
+    //- background-image: url('./img/wallpaper1.jpg')
     }
     .line_seperator {
     //- background-color: yellowgreen;
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 2%;
     }
     .main-container {
     //- background-color: tomato;
@@ -31,6 +32,11 @@ head
     }
     button {
     margin: auto;
+    margin-bottom: 3%;
+    width: 70px;
+    height: 30px;
+    font-weight: 500;
+    //- padding: auto;
     }
     a {
     margin: auto;
@@ -38,7 +44,7 @@ head
     .test {
     margin: auto;
     padding-bottom: 7px;
-    font-size: 0.65rem;
+    font-size: 0.7rem;
     }
     .t1 {
     margin: auto;
@@ -46,6 +52,7 @@ head
     }
     .champname {
     margin: auto;
+    font-weight: 550;
     }
     img {
     width: 90px;
