--- a/views/garen.pug
+++ b/views/garen.pug
@@ -5,59 +5,51 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
   title Document
   style.
-    .champion {
-    //- background-color: violet;
-    width: 900px;
-    height: auto;
-    margin: 0 auto;
-    //- margin-left: 13%;
-    margin-top: 7%;
-    border: 2px solid rgb(226, 164, 71);
-    //- background-image: url('./img/wallpaper1.jpg')
-    }
-    .line_seperator {
-    //- background-color: yellowgreen;
-    display: flex;
-    justify-content: flex-start;
-    }
     .main-container {
-    //- background-color: tomato;
+    background-color: aqua;
     display: flex;
-    width: 95%;
+    width: 1000px;
     height: auto;
+    text-align: center;
     margin: auto;
     justify-content: center;
     flex-wrap: wrap;
-    text-align: center;
+    margin-top: 15%;
     }
-    button {
+    .content-container {
     margin: auto;
-    margin-bottom: 3%;
-    width: 70px;
-    height: 30px;
-    font-weight: 500;
-    //- padding: auto;
-    }
-    a {
-    margin: auto;
-    }
-    .test {
-    margin: auto;
-    padding-bottom: 7px;
-    font-size: 0.7rem;
-    }
-    .t1 {
-    margin: auto;
-    visibility: hidden;
-    }
-    .champname {
-    margin: auto;
-    font-weight: 550;
+    padding: auto;
+    padding-bottom: 3%;
     }
     img {
-    width: 90px;
-    height: 90px;
+    width: 270px;
+    height: auto;
+    }
+    .liner {
+    width: 90%;
+    display: flex;
+    padding: auto;
+    padding-bottom: 1%;
+    }
+    .buy {
+    position: relative;
     cursor: pointer;
+    font-weight: 500;
+    }
+    .btn-box {
+    position: relative;
+    left: 16%;
+    padding: auto;
+    margin: auto;
+    /* background-color: blue; */
+    }
+    .money-icon {
+    width: 13px;
+    height: auto;
+    padding-right: 1%;
+    }
+    #test {
+    margin-left: 8%;
     }
   script(type='module', src='/js/front.js')
   link(rel='stylesheet', href='/css/header.css', type='text/css')
