211211_스킨구매페이지CSS_안성준

--- a/views/css/garen.css
+++ b/views/css/garen.css
@@ -1,5 +1,14 @@
+body {
+    margin: 0;
+}
+:root {
+    --navText-color: rgb(226, 164, 71);
+    --leftPopup-color: rgba(70, 70, 70, 0.61);
+  }
+
 .main-container {
-    background-color: aqua;
+    /* background-color: rgba(136, 218, 218, 0.37); */
+    /* background-color: rgba(24, 24, 24, 0.342); */
     display: flex;
     width: 1000px;
     height: auto;
@@ -7,43 +16,132 @@
     margin: auto;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 15%;
+    margin-top: 45px;
+    
+    padding: 20px;
+    /* border: 2px solid var(--navText-color); */
+}
+@media (max-width: 768px) {
+    .main-container {
+        width: 600px;
+    }
 }
 .content-container {
+    /* background-color: rgba(24, 24, 24, 0.342); */
+
+    width: 280px;
+    /* border: 3px solid red; */
+
     margin: auto;
     padding: auto;
     padding-bottom: 3%;
 }
-img {
+.skin-container img {
     width: 270px;
     height: auto;
+    box-shadow: 0px 0px 30px rgb(255, 153, 0);
+    /* box-shadow: 0px 0px 30px yellow ; */
+    border-radius: 10px;
 }
+
+.text-box {
+    font-size: 120%;
+    font-weight: 800;
+
+    color:white;
+    opacity: 1;
+    text-shadow: 0 0 3px white, 0 0 3px white, 0 0 5px black;
+}
+.price {
+    color: var(--navText-color);
+}
+
 .liner {
+    /* background-color: yellow; */
     width: 90%;
     display: flex;
     padding: auto;
     padding-bottom: 1%;
 }
-
 .buy {
     position: relative;
     cursor: pointer;
     font-weight: 500;
+
+    background-color: var(--leftPopup-color);
+    border: 1px solid var(--navText-color);
+    border-radius: 10px;
+    color: var(--navText-color);
+    font-size: 80%;
+    font-weight: 800;
+    width: 100px;
+    height: 30px;
+
+    margin-top: 3px;
 }
 
+
 .btn-box {
+    /* background-color: tomato; */
     position: relative;
-    left: 13%;
+    left: 16%;
     padding: auto;
     margin: auto;
-    /* background-color: blue; */
+/* background-color: blue; */
 }
 .money-icon {
     width: 13px;
     height: auto;
     padding-right: 1%;
 }
-
 #test {
     margin-left: 8%;
+
+    animation: testAnim 1.5s infinite;
+    color: green;
+    text-shadow: none;
 }
+@keyframes testAnim {
+    0% {
+        text-shadow: none;
+      }
+    10% {
+        text-shadow: 0 0 5px;
+    }
+    20% {
+        text-shadow: none; 
+    }
+    30% {
+        text-shadow: 0 0 5px;
+    }
+    40% {
+      text-shadow: none; 
+    }
+    50% {
+        text-shadow: 0 0 5px;
+    }
+    60% {
+        text-shadow: none;
+    }
+    70% {
+        text-shadow: 0 0 5px;
+      }
+    80% {
+      text-shadow: none; 
+    }
+    90% {
+        text-shadow: 0 0 5px;
+      }
+    100% {
+      text-shadow: none;
+    }
+  }
+
+.imgBG img{
+    width: 100vw;
+    height: 100vh;
+    margin-left: 0;
+    position: fixed;
+    z-index: -1;
+}
+
