--- a/views/garen_Origin.pug
+++ b/views/garen_Origin.pug
@@ -4,28 +4,67 @@ head
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
   title Document
-    
+  style.
+    .main-container {
+    background-color: aqua;
+    display: flex;
+    width: 1000px;
+    height: auto;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 15%;
+    }
+    .content-container {
+    margin: auto;
+    padding: auto;
+    padding-bottom: 3%;
+    }
+    img {
+    width: 270px;
+    height: auto;
+    }
+    .liner {
+    width: 90%;
+    display: flex;
+    padding: auto;
+    padding-bottom: 1%;
+    }
+    .buy {
+    position: relative;
+    cursor: pointer;
+    font-weight: 500;
+    }
+    .btn-box {
+    position: relative;
+    left: 16%;
+    padding: auto;
+    margin: auto;
+    /* background-color: blue; */
+    }
+    .money-icon {
+    width: 13px;
+    height: auto;
+    padding-right: 1%;
+    }
+    #test {
+    margin-left: 8%;
+    }
   script(type='module', src='/js/front.js')
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
-  link(rel='stylesheet', href='/css/garen.css', type='text/css')
 
 body
     header 
-    include ./header.pug
-    
-    .imgBG
-        img(src= '/' + test[0].imgsrc)
+        include ./header.pug
     
     include ./infoBox.pug
-
-main
-    
 
     .main-container
         - for (let i=0; i<test.length; i++)
             if (i%3==0)
-                //- .liner  
+                .liner  
                             
             .content-container
                 .skin-container
