211211_화면 768사이즈_인포박스 사이즈변경

--- a/views/css/infoBox.css
+++ b/views/css/infoBox.css
@@ -17,6 +17,15 @@
 
     z-index: 2;
 }
+@media (max-width: 768px) {
+    .infoBoxContainer {
+        width: 10vh;
+        height: 10vh;
+        top: 160px;
+        right: 10px;
+        font-size: 80%;
+    }
+}
 
 .infoBox {
     background-color: rgba(39, 39, 39);
