--- a/views/boardpage.pug
+++ b/views/boardpage.pug
@@ -6,54 +6,63 @@ head(lang="ko")
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/table.css', type='text/css')
+  link(rel='stylesheet', href='/css/boardtable.css', type='text/css')
   link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
 
-body(style="text-align : center")
+body
     header 
         include ./header.pug
 
         include ./infoBox.pug
     
     main
-        h1 #{title}
-        a(href='/') main
-        span &nbsp&nbsp
-        if(loginstate=='okay')
-            a(href='/board/write') 글쓰기
-        table(border='1')
+        h1.maintitle #{title}
+
+        div.boardlink
+            a(href='/') main
+            span &nbsp&nbsp
+            if(loginstate=='okay')
+                a(href='/board/write') 글쓰기
+        br
+        table
             tbody
-                tr 
-                    td 번호
-                    td 작성자
+                tr.boardtop
+                    td.boardnum 번호
+                    td.boardid 작성자
                     td 제목
-                    td 조회수
-                    td 수정일
-                    td 등록일
+                    td.boardhit 조회수
+                    td.boarddate 수정일
+                    td.boarddate 등록일
+                    
                 -for(var i = (page * page_num) - page_num; i<(page * page_num); i++)
+                    
                     -if(i > length) 
                         -var data = {}
                     -else var data = rows[i]
+                        -var commentnum = comment.filter((e)=>e.board_idx==data.idx).length
                         tr
-                            td #{i + 1}
-                            td #{data.userid}
+                            td.boardnum #{i + 1}
+                            td.boardid #{data.userid}
                             td
-                                a(href='/board/read/' + data.idx) #{data.title}
-                            td #{data.hit}
-                            td #{data.modidate}
-                            td #{data.regdate}
+                                a.boardtitle(href='/board/read/' + data.idx) #{data.title}
+                                    if(commentnum!=0)
+                                        span.commentnum [#{commentnum}]
+                            td.boardhit #{data.hit}
+                            td.boarddate #{data.modidate}
+                            td.boarddate #{data.regdate}
 
             
                 tr
-                    td(colspan='6')
+                    td.pagenum(colspan='6')
                         -for (var j = 0; j < rows.length / page_num; j++) 
-                            a(href='/board/page/' + (j + 1)) #{j+1}
+                            a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
                             span &nbsp&nbsp
 
                 tr
-                    td(colspan='6')
+                    td.searchform(colspan='6')
                         form(action="/board/search/" method = "post")
                             select(name="category")
                                 option(value="userid") 글쓴이
                                 option(value="title") 제목
-                            input(name ="search" type="text" required='')
+                            input.searchinput(name ="search" type="text" required='')
                             input(type="submit" value="검색")
