--- a/views/searchpage.pug
+++ b/views/searchpage.pug
@@ -6,9 +6,10 @@ head(lang="ko")
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/table.css', type='text/css')
+  link(rel='stylesheet', href='/css/boardtable.css', type='text/css')
   link(rel='stylesheet', href='/css/infoBox.css', type='text/css')
 
-body(style="text-align : center")
+body
     header 
         include ./header.pug
 
