--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,8 @@ body
         .leftPopupContainer.lefyPopupDelay
           .leftPopupBox.lefyPopupDelay
             div
-              img.leftPopupImg(src='./img/main/nidalee.png')
+              a(href='https://www.google.com')
+                img.leftPopupImg(src='./img/main/nidalee.png')
             .leftPopupBG
               img.leftPopupBG(src='./img/main/logoLeftPopupbg.png')
 
