메인화면 니달리 클릭 이벤트 수정

--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ body
         .leftPopupContainer.lefyPopupDelay
           .leftPopupBox.lefyPopupDelay
             div
-              a(href='https://www.google.com')
+              form(action='/skin/Nidalee', method='get', class="formnidal")
                 img.leftPopupImg(src='./img/main/nidalee.png')
             .leftPopupBG
               img.leftPopupBG(src='./img/main/logoLeftPopupbg.png')
