--- a/views/mypage.pug
+++ b/views/mypage.pug
@@ -6,6 +6,7 @@ head(lang="ko")
   title #{title}
   link(rel='stylesheet', href='/css/header.css', type='text/css')
   link(rel='stylesheet', href='/css/table.css', type='text/css')
+  link(rel='stylesheet', href='/css/mypage.css', type='text/css')
 
 body(style="text-align : center")
     header 
@@ -15,14 +16,15 @@ body(style="text-align : center")
         div 환영합니다 #{id} 소환사님
         br
         
-        table(border='1')
-          tbody
+        h3 My Board
+        table(border='0')
+          thead 
             tr 
-              td 번호
-              td 제목
-              td 조회수
-              td 수정일
-              td 등록일
+              th 번호
+              th 제목
+              th 조회수
+              th 수정일
+              th 등록일
             
             -for(var i = 0; i<rows.length; i++)
               -if(i > rows.length) 
@@ -38,7 +40,8 @@ body(style="text-align : center")
         br
 
         if (imgsrc)
-          table(border='1')
+          h3 My Skin
+          table(border='0')
             tbody
               tr
                 -for(var i = 0; i<imgsrc.length; i++)
